ros_ws/log/build_2021-12-06_19-55-32/lidar_udp_catch/stderr.log
  File "/home/itolab-chotaro/HDD/SBIR-sit/ros_ws/install/lidar_udp_catch/lib/python3.6/site-packages/lidar_udp_catch/lidar_udp_catch.py", line 35
    print("\n")
        ^
SyntaxError: invalid syntax

